--- a/prepare/snd_hit.html
+++ b/prepare/snd_hit.html
@@ -167,12 +167,11 @@
           <table border="0" cellpadding="0" cellspacing="4">
             <tbody>
               <tr>
-                <td valign="center"><input checked="false" disabled="1" type=
-                "radio" />Yes</td>
+                <td valign="center"><input disabled type="radio" />Yes</td>
               </tr>
 
               <tr>
-                <td valign="center"><input checked="true" type="radio" />No</td>
+                <td valign="center"><input checked type="radio" />No</td>
               </tr>
             </tbody>
           </table>
@@ -186,12 +185,11 @@
           <table border="0" cellpadding="0" cellspacing="4">
             <tbody>
               <tr>
-                <td valign="center"><input checked="true" type="radio" />Yes</td>
+                <td valign="center"><input checked type="radio" />Yes</td>
               </tr>
 
               <tr>
-                <td valign="center"><input checked="false" disabled="1" type=
-                "radio" />No</td>
+                <td valign="center"><input disabled type="radio" />No</td>
               </tr>
             </tbody>
           </table>
@@ -251,12 +249,11 @@
           <table border="0" cellpadding="0" cellspacing="4">
             <tbody>
               <tr>
-                <td valign="center"><input name="Q1" type="radio" value=
-                "Yes" />Yes</td>
+                <td valign="center"><input name="Q1" type="radio" required value="Yes" />Yes</td>
               </tr>
 
               <tr>
-                <td valign="center"><input name="Q1" type="radio" value="No" />No</td>
+                <td valign="center"><input name="Q1" type="radio" required value="No" />No</td>
               </tr>
             </tbody>
           </table>
